force-app/main/default/objects/Adverse_Action__c/Adverse_Action__c.object-meta.xml
<CustomObject>
    <description>RCI</description>
    <label>Adverse Action</label>
    <nameField>
        <displayFormat>AA-{0000000000}</displayFormat>
        <label>Adverse Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adverse Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>