force-app/main/default/objects/Adverse_Action__c/fields/Adverse_Action__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Action__c</fullName>
    <label>Adverse Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TerminatedDischargedFired</fullName>
                <label>Terminated/Discharged/Fired</label>
            </value>
            <value>
                <fullName>Demoted</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Pay Reduced</fullName>
            </value>
            <value>
                <fullName>Hours Reduced</fullName>
            </value>
            <value>
                <fullName>Changed Work Schedule</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Disciplinary Action/Written Warning</fullName>
            </value>
            <value>
                <fullName>Poor Evaluation</fullName>
            </value>
            <value>
                <fullName>Threatened</fullName>
            </value>
            <value>
                <fullName>Benefits_Denied</fullName>
                <label>Benefits Denied</label>
            </value>
            <value>
                <fullName>Not Hired</fullName>
            </value>
            <value>
                <fullName>Not Rehired</fullName>
            </value>
            <value>
                <fullName>Harassed</fullName>
            </value>
            <value>
                <fullName>Intimidated</fullName>
            </value>
            <value>
                <fullName>Forced to Resign/Quit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Disc Action</fullName>
                <isActive>false</isActive>
                <label>Disc Action</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>