force-app/main/default/objects/Adverse_Action__c/fields/Adverse_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Action_Date__c</fullName>
    <label>Adverse Action Date</label>
    <type>Date</type>
</CustomField>