force-app/main/default/objects/Adverse_Action__c/fields/Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Case_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Management</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Adverse Actions</relationshipLabel>
    <relationshipName>Adverse_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>